[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-ssm-parameter-store"
version = "0.7"
description = "A simple python module to load secure settings from AWS SSM Parameter Store."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    {name = "HUIT Academic Technology", email = "academictechnology@harvard.edu"}
]

requires-python = ">=3.10"

dependencies = [
    "boto3>=1.9.91",
    "PyYAML>=3.13",
    "requests>=2",
]

classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: X.Y",  # Replace "X.Y" as appropriate.
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",  # Example license.
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[project.urls]
Homepage = "https://github.com/Harvard-University-iCommons/django-ssm-parameter-store"
